fixed underline on replies button and added min width to upvote block to minimise annoying spacing issue

--- a/app/assets/stylesheets/components/_feedback.scss
+++ b/app/assets/stylesheets/components/_feedback.scss
@@ -31,7 +31,8 @@ p {
   border: none;
   color: $danger;
   cursor: pointer;
-  border-bottom: 1px solid $danger;
+  // border-bottom: 1px solid $danger;
+  text-decoration: underline;
 }
 
 .reply-form {
