--- a/app/assets/stylesheets/components/_upvote.scss
+++ b/app/assets/stylesheets/components/_upvote.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 4px;
+  min-width: 50px;
 
   // Vertical variant
   &.vertical {
